--- a/barter.css
+++ b/barter.css
@@ -8,8 +8,7 @@ body {
 
 
 img {
-    height: 27px;
-    width: 100px;
+    max-height: 27px;
     margin-top: 50px;
     margin-left: 85px;
 }
@@ -17,6 +16,7 @@ img {
 .top-level {
     padding-top: 50px;
     padding-bottom: 25px;
+    padding-left: 15px;
 }
 
 #reg{
@@ -24,31 +24,34 @@ img {
     padding-top: 10px;
     padding-bottom: 13px;
     border-bottom: 1px solid rgba(0,0,0,0.2);
-    width: 230px;
+    width: 95%;
     text-align: center;
 }
 
-/* #reg:hover{
+#reg:hover{
     border: none;
     border-bottom: 1px solid blue;
-} */
+    cursor: pointer;
+}
 
 #log{
     display: inline-block;
     padding-top: 10px;
     padding-bottom: 13px;
     border-bottom: 1px solid blue;
-    width: 230px;
+    width: 95%;
     text-align: center;
 }
 
-/* #log:hover{
+
+#log:hover{
     border: none;
     border-bottom: 1px solid blue;
-} */
+    cursor: pointer;
+}
 
 .custom-field {
-    width: 500px;
+    width: 100%;
     height: 60px;
     margin-top: 25px;
     border: none;
@@ -61,9 +64,17 @@ img {
     border-bottom: 1px solid rgba(0,0,255,1);
 }
 
-/* #reg-text {
-    padding-right: 650px;
-} */
+.extra-link {
+    float: right;
+    font-size: 12px;
+    margin-top: 5px;
+    color: #8b98ea;
+}
+
+.extra-link:hover {
+    color: rgba(0,0,0,0.6);
+    cursor: pointer;
+}
 
 .account {
     height: 60px;
@@ -71,7 +82,7 @@ img {
     margin-top: 60px;
     margin-bottom: 60px;
     border-radius: 40px;
-    background-color: rgba(0,0,255,0.4);
+    background-color: rgba(136,147,236,0.7);
     color: white;
     vertical-align: middle;
     line-height: 60px;
@@ -94,7 +105,7 @@ img {
 }
 
 .account:hover {
-    background-color: rgba(0,1,255,1);
+    background-color: rgba(136,147,236,1);
 }
 
 .social {
@@ -141,6 +152,10 @@ img {
 }
 
 a {
+    text-decoration: none;
+}
+
+a:hover {
     text-decoration: none;
 }
 
